# project

./: .dockerignore  .gitignore  CLAUDE.md  ChatGPT-项目功能对齐建议 (1).md  ChatGPT-项目功能对齐建议 (2).md  ChatGPT-项目功能对齐建议 (3).md  ChatGPT-项目功能对齐建议.md  README.md  docker-compose.yml  package-lock.json  package.json  收尾.txt  概述.md  问题.txt  项目介绍.md  项目问题解答.md
backend/: =2.0.0  =6.5.0  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20240101_0001_init_all_tables.py  20240101_0002_add_workflow_executions.py  20240101_0003_add_pipeline_runs.py  20240101_0004_add_scenario_status.py  20260101_0001_init_all_tables.py  20260101_0002_add_workflow_executions.py  20260101_0003_add_pipeline_runs.py  20260101_0004_add_scenario_status.py  20260330_0005_add_scenario_run_stage_fields.py  20260401_0006_add_batch_ingestion_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  errors.py  logging.py  loop.py  observability.py  scoring_policy.py  utils.py
backend/app/models/: __init__.py  alert.py  base.py  batch.py  evidence.py  flow.py  investigation.py  pcap.py  pipeline.py  recommendation.py  (+2 more)
backend/data/: nettwin.db  pcap_id.txt
backend/models/: composite_ranker.joblib  composite_ranker.meta.json  evaluation_report.json  flow_iforest.joblib  flow_iforest.meta.json
backend/scripts/: gen_demo_pcap.py  generate_demo_pcaps.py  run_ablation_study.py  run_scenarios_cli.py  seed_samples.py  train_composite_model.py  train_flow_model.py  training_dataset.py
(+292 files in other folders)
